--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "@nextui-org/react": "^2.4.6",
     "electron-squirrel-startup": "^1.0.1",
     "framer-motion": "^11.3.18",
+    "i18next": "^23.12.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.0"
   }
 }
