--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
     "@electron/fuses": "^1.8.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "autoprefixer": "^10.4.19",
-    "electron": "31.3.0",
-    "eslint": "^8.0.1",
+    "electron": "^31.3.1",
+    "eslint": "^9.8.0",
     "eslint-plugin-import": "^2.25.0",
     "postcss": "^8.4.40",
     "sass": "^1.77.8",
     "tailwindcss": "^3.4.7",
     "ts-node": "^10.0.0",
-    "typescript": "~4.5.4",
+    "typescript": "^5.5.4",
     "vite": "^5.0.12"
   },
   "keywords": [],
