--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "i18next": "^23.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.0.0"
+    "react-i18next": "^15.0.0",
+    "sonner": "^1.5.0"
   }
 }
