--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@electron-forge/plugin-fuses": "^7.4.0",
     "@electron-forge/plugin-vite": "^7.4.0",
     "@electron/fuses": "^1.8.0",
+    "@types/node-fetch": "^2.6.11",
     "@types/nunjucks": "^3.2.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
